# seqkit-rs

./: .gitignore  Cargo.toml  README.md
src/: faidx.rs  io.rs  main.rs  output.rs  stats.rs
