[package]
name = "seqkit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.3.1", features = ["derive"] }
log = "0.4.18"
log4rs = "1.2.0"
needletail = { version = "0.5.1", features = ["compression"] }
rayon = "1.7.0"
tabled = "0.12.2"
