[package]
name = "seqkit-rs"
version = "0.1.0"
edition = "2021"
authors = ["Wenjie Wei <wjwei9908@gmail.com>",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.3.1", features = ["derive"] }
log = "0.4.18"
log4rs = "1.2.0"
memchr = "2.5.0"
#needletail = { version = "0.5.1", features = ["compression"] }
needletail = {git = "https://github.com/wjwei-handsome/needletail.git", branch = "add_faidx"}
rayon = "1.7.0"
regex = "1.8.4"
tabled = "0.12.2"
